--- a/front/tuunidad-web/template/header.html
+++ b/front/tuunidad-web/template/header.html
@@ -1,29 +1,74 @@
 <div class="row">
     <div class="col-12">
-        <img src="assets/src/images/logo-sena-negro.jpg" width="100px" height="100px"
-            class="rounded mx-auto d-block" alt="sena">
+        <img src="assets/src/images/logo-sena-negro.jpg" width="100px" height="100px" class="rounded mx-auto d-block"
+            alt="sena">
     </div>
 </div>
 <div class="row" id="main-nav">
     <div class="col-12">
         <ul class="nav nav-pills">
             <li class="nav-item">
-                <a class="nav-link" id='btn-pag1' aria-current="page" href="#" data-tag="pag1">Formulario usuarios</a>
+                <a class="nav-link page" id='btn-inicio' aria-current="page" href="#" data-tag="inicio">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id='btn-pag2' aria-current="page" href="#" data-tag="pag2">Lista usuarios</a>
+                <a class="nav-link page" id='btn-mision' aria-current="page" href="#" data-tag="mision">Mision</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Registro vivienda</a>
+                <a class="nav-link page" id='btn-vision' aria-current="page" href="#" data-tag="vision">Vision</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Registro vehiculos</a>
+                <a class="nav-link page" id='btn-nosotros' aria-current="page" href="#" data-tag="nosotros">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Ingreso</a>
+                <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Ingreso</a>
             </li>
         </ul>
     </div>
     <br>
     <br>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="loginModalLabel">Inicio de Sesión</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="login-form" action="#">
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Correo de Ingreso</label>
+                        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">No se compartira su correo con nadie mas.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="password" name="password">
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="remember-user" name="remember-user">
+                        <label class="form-check-label" for="remember-user">Recordar datos</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Login</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script src="assets/js/header.js"></script>
+
+<!-- --
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="assets/js/jquery.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script> -->
