add all changes

--- a/front/tuunidad-web/template/header.html
+++ b/front/tuunidad-web/template/header.html
@@ -51,12 +51,12 @@
                         <input type="checkbox" class="form-check-input" id="remember-user" name="remember-user">
                         <label class="form-check-label" for="remember-user">Recordar datos</label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary" style="display: none;">Submit</button>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Login</button>
+                <button type="button" class="btn btn-primary" id="btnLogin">Login</button>
             </div>
         </div>
     </div>
