--- a/front/tuunidad-web/template/admin/header.html
+++ b/front/tuunidad-web/template/admin/header.html
@@ -7,6 +7,19 @@
 <div class="row" id="main-nav">
     <div class="col-12">
         <ul class="nav nav-pills">
+            <li>
+                <div class="dropdown">
+                    <a class="btn btn-secondaryh dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                      Inmuebles
+                    </a>
+                  
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <li><a class="dropdown-item page" href="#" data-tag="inmueble-form">Crear</a></li>
+                      <li><a class="dropdown-item page" href="#" data-tag="inmueble-list">Listar</a></li>
+                    </ul>
+                  </div>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link page" id='btn-inicio' aria-current="page" href="#" data-tag="inicio">Inicio</a>
             </li>
