--- a/front/tuunidad-web/template/admin/pages/inmueble-form.html
+++ b/front/tuunidad-web/template/admin/pages/inmueble-form.html
@@ -1,4 +1,5 @@
-<h3>Formulario nuevo inmueble</h3>
+<h3 class="hidden" id='title-new-inmueble'>Formulario nuevo inmueble</h3>
+<h3 class="hidden" id='title-edit-inmueble'>Formulario edicion de inmueble <label></label></h3>
 <form id="formulario-inmueble">
     <div class="row">
         <div class="col-6">
