--- a/front/tuunidad-web/template/admin/header.html
+++ b/front/tuunidad-web/template/admin/header.html
@@ -1,7 +1,10 @@
 <div class="row">
     <div class="col-12">
-        <img src="assets/src/images/logo-sena-negro.jpg" width="100px" height="100px" class="rounded mx-auto d-block"
-            alt="sena">
+        <div id="logo">
+            <img src="assets/src/images/logo-tuunidad.png" width="130px" height="130px" class="rounded mx-auto d-block"
+            alt="TuUnidad">
+        </div>
+        <label id="data-user"></label>
     </div>
 </div>
 <div class="row" id="main-nav">
@@ -14,6 +17,7 @@
                     </a>
                   
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <li><a class="dropdown-item page" href="#" data-tag="inmueble-dashboard">Tablero</a></li>
                       <li><a class="dropdown-item page" href="#" data-tag="inmueble-form">Crear</a></li>
                       <li><a class="dropdown-item page" href="#" data-tag="inmueble-list">Listar</a></li>
                     </ul>
@@ -34,9 +38,6 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" id="btnLogout">Salir</a>
-            </li>
-            <li class="nav-item">
-                <label id="data-user">faasdad</label>
             </li>
         </ul>
     </div>
