--- a/front/tuunidad-web/template/admin/pages/inmueble-list.html
+++ b/front/tuunidad-web/template/admin/pages/inmueble-list.html
@@ -15,4 +15,4 @@
       
     </tbody>
   </table>
-  <script src="assets/js/admin/inmueble-list.js"></script>
+  <script src="assets/js/admin/inmueble-list.js?t=8"></script>
