--- a/front/tuunidad-web/template/header.html
+++ b/front/tuunidad-web/template/header.html
@@ -1,7 +1,9 @@
 <div class="row">
     <div class="col-12">
-        <img src="assets/src/images/logo-sena-negro.jpg" width="100px" height="100px" class="rounded mx-auto d-block"
-            alt="sena">
+        <div id="logo">
+            <img src="assets/src/images/logo-tuunidad.png" width="130px" height="130px" class="rounded mx-auto d-block"
+            alt="TuUnidad">
+        </div>
     </div>
 </div>
 <div class="row" id="main-nav">
