add new changes

--- a/front/tuunidad-web/template/admin/pages/inmueble-dashboard.html
+++ b/front/tuunidad-web/template/admin/pages/inmueble-dashboard.html
@@ -1,1 +1,66 @@
 <h3>Tablero de propiedades</h3>
+
+<br>
+<div id="zonas">
+
+    <!-- -- >
+    <div class="zona">
+        <h4>Casas</h4>
+        <div class="elementos">
+            <div class="elemento casa">
+                <label>CAS001</label>
+                <div class="icono"></div>
+            </div>
+            <div class="elemento casa">
+                <label>CAS002</label>
+                <div class="icono"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="zona">
+        <h4>Aptos</h4>
+        <div class="elementos">
+            <div class="elemento apto">
+                <label>APT001</label>
+                <div class="icono"></div>
+            </div>
+            <div class="elemento apto">
+                <label>APT002</label>
+                <div class="icono"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="zona">
+        <h4>Parqueaderos</h4>
+        <div class="elementos">
+            <div class="elemento parqueadero">
+                <label>PAR001</label>
+                <div class="icono"></div>
+            </div>
+            <div class="elemento parqueadero">
+                <label>PAR002</label>
+                <div class="icono"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="zona">
+        <h4>Bodegas</h4>
+        <div class="elementos">
+            <div class="elemento bodega">
+                <label>BOD001</label>
+                <div class="icono"></div>
+            </div>
+            <div class="elemento bodega">
+                <label>BOD002
+                </label>
+                <div class="icono"></div>
+            </div>
+        </div>
+    </div> -->
+
+</div>
+<link href="assets/css/inmueble-dashboard.css" rel="stylesheet" media="screen">
+<script src="assets/js/admin/inmueble-dashboard.js?t=8"></script>
