--- a/front/tuunidad-web/template/admin/header.html
+++ b/front/tuunidad-web/template/admin/header.html
@@ -25,7 +25,16 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link page" id='btn-inicio' aria-current="page" href="#" data-tag="inicio">Inicio</a>
+                <div class="dropdown">
+                    <a class="btn btn-secondaryh dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                      Personas
+                    </a>
+                  
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <li><a class="dropdown-item page" href="#" data-tag="persona-form">Crear</a></li>
+                      <li><a class="dropdown-item page" href="#" data-tag="persona-list">Listar</a></li>
+                    </ul>
+                  </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link page" id='btn-mision' aria-current="page" href="#" data-tag="mision">pp2</a>
